messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
  labels:
    app: django-messaging
spec:
  type: ClusterIP
  selector:
    app: django-messaging
    # This selector can be modified to switch between blue and green
    # For blue deployment: version: blue
    # For green deployment: version: green
    version: blue
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
---
# This service will always route to blue deployment
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-blue-service
  labels:
    app: django-messaging
    version: blue
spec:
  type: ClusterIP
  selector:
    app: django-messaging
    version: blue
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
---
# This service will always route to green deployment
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-green-service
  labels:
    app: django-messaging
    version: green
spec:
  type: ClusterIP
  selector:
    app: django-messaging
    version: green
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
